# ai-llm-eval-lab

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: thresholds.yaml
datasets/: rag_cases.jsonl  redteam.jsonl  support_qa.jsonl
evalkit/: __init__.py  __main__.py  gate.py  models.py  report.py  runner.py  scorers.py
evalkit/providers/: __init__.py  anthropic_provider.py  mock.py  openai_provider.py
tests/: test_eval.py
