[project]
name = "ai-llm-eval-lab"
version = "0.1.0"
description = "A runnable evaluation harness for LLM features: golden sets, RAG grounding, red-teaming, and a CI release gate."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
dev = ["pytest>=8.0", "pyyaml>=6.0"]

[project.scripts]
evalkit = "evalkit.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["evalkit", "evalkit.providers"]
